--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+.survey{
+   margin-top: 100px;
+}
 body {
     /* background-image: linear-gradient(to bottom right, #b3ddf2, white, #f7797d); */
     /* color: white; */
